# OpengGL_Playground

./: CMakeLists.txt  README.md
shader/: vertex.glsl
shaders/fragment/: fragment.glsl  monochrome.glsl  top_right.glsl
shaders/vertex/: inversed.glsl  vertex.glsl
src/: Actor.cpp  Actor.hpp  Cuboid.cpp  Cuboid.hpp  MacierzGL.cpp  MacierzGL.hpp  Matrix.hpp  OpenGLApp.cpp  OpenGLApp.hpp  Quadric.hpp  Shader.cpp  Shader.hpp  Sphere.hpp  Square.cpp  Square.hpp  Utils.cpp  Utils.hpp  Vertex.hpp  Wektor.hpp  Window.cpp  Window.hpp  main.cpp
src/Actors/: Actor.cpp  ActorWithIndexBuffer.cpp  Cuboid.cpp  Quadric.cpp  SphereWithIndexBuffer.cpp  Square.cpp  SquareWithIndexBuffer.cpp
